[gd_scene load_steps=89 format=3 uid="uid://de871ymwughf0"]

[ext_resource type="Script" path="res://assets/scripts/nucleo_04/actividad_02.gd" id="1_4a6os"]
[ext_resource type="Texture2D" uid="uid://dlj7ogvgu14wt" path="res://img/nucleo_4/fondo/linea_4_1.png" id="2_uody8"]
[ext_resource type="Texture2D" uid="uid://cbljfubt54sde" path="res://img/nucleo_4/fondo/linea_4_2.png" id="3_2wyqo"]
[ext_resource type="Texture2D" uid="uid://b48akylq5dlym" path="res://img/nucleo_4/fondo/linea_4_3.png" id="4_1a41d"]
[ext_resource type="Texture2D" uid="uid://dhxcny280adk" path="res://img/nucleo_4/fondo/linea_4_4.png" id="5_ang6x"]
[ext_resource type="Texture2D" uid="uid://cu3lrtavw1vp2" path="res://img/nucleo_4/fondo/linea_4_5.png" id="6_geked"]
[ext_resource type="Texture2D" uid="uid://bigrmh54blsit" path="res://img/nucleo_4/fondo/linea_4_6.png" id="7_83wkd"]
[ext_resource type="Texture2D" uid="uid://rpug1t81bcvw" path="res://img/nucleo_4/fondo/linea_4_7.png" id="8_pkg4p"]
[ext_resource type="Texture2D" uid="uid://beyiwn5prejon" path="res://img/nucleo_4/fondo/linea_4_8.png" id="9_k5vty"]
[ext_resource type="Texture2D" uid="uid://bg4h3u2gki0ur" path="res://img/nucleo_4/fondo/linea_4_9.png" id="10_tklke"]
[ext_resource type="Texture2D" uid="uid://c65aktiprqtrv" path="res://img/nucleo_4/fondo/linea_4_10.png" id="11_bjwsp"]
[ext_resource type="Texture2D" uid="uid://bsbxilel226j7" path="res://img/nucleo_4/fondo/linea_4_11.png" id="12_6cexi"]
[ext_resource type="Texture2D" uid="uid://cord5n4l0och5" path="res://img/nucleo_4/fondo/linea_4_12.png" id="13_elvhn"]
[ext_resource type="Texture2D" uid="uid://dhviwljdlkcim" path="res://img/nucleo_4/fondo/linea_4_13.png" id="14_pyf2i"]
[ext_resource type="Texture2D" uid="uid://bxyd8pirxj7ms" path="res://img/nucleo_4/fondo/linea_4_14.png" id="15_nvj2q"]
[ext_resource type="Texture2D" uid="uid://corgkujyshxgf" path="res://img/nucleo_4/fondo/linea_4_15.png" id="16_hja2t"]
[ext_resource type="Texture2D" uid="uid://qq5asc8hv4ba" path="res://img/nucleo_4/fondo/linea_4_16.png" id="17_flyam"]
[ext_resource type="Texture2D" uid="uid://5hm81ok6og6h" path="res://img/nucleo_4/fondo/linea_4_17.png" id="18_cy2w8"]
[ext_resource type="Texture2D" uid="uid://duasj1okqot4c" path="res://img/nucleo_4/fondo/linea_4_18.png" id="19_muhme"]
[ext_resource type="Texture2D" uid="uid://de7nmkgc6thbj" path="res://img/nucleo_4/fondo/linea_4_19.png" id="20_qnmam"]
[ext_resource type="Texture2D" uid="uid://x3j06b5v2id0" path="res://img/nucleo_4/fondo/linea_4_20.png" id="21_lkf27"]
[ext_resource type="Texture2D" uid="uid://dfvdjxbpkmbb8" path="res://img/nucleo_4/fondo/linea_4_21.png" id="22_i6hby"]
[ext_resource type="Texture2D" uid="uid://ciqi2n54w0grh" path="res://img/nucleo_4/fondo/linea_4_22.png" id="23_1xqi5"]
[ext_resource type="Texture2D" uid="uid://djtxiq007fmr3" path="res://img/nucleo_4/fondo/linea_4_23.png" id="24_m5lel"]
[ext_resource type="Texture2D" uid="uid://dkuchtbyt4x3r" path="res://img/nucleo_4/fondo/linea_4_24.png" id="25_85sgg"]
[ext_resource type="Texture2D" uid="uid://b03yag5l3irxd" path="res://img/nucleo_4/fondo/linea_4_25.png" id="26_skycf"]
[ext_resource type="Texture2D" uid="uid://blwdydq04qtvj" path="res://img/nucleo_4/fondo/linea_4_26.png" id="27_kvgxb"]
[ext_resource type="Texture2D" uid="uid://xw6s88bjlnwt" path="res://img/nucleo_4/fondo/linea_4_27.png" id="28_fh6ak"]
[ext_resource type="Texture2D" uid="uid://b74ckttwv0txg" path="res://img/nucleo_4/fondo/linea_4_28.png" id="29_wkaby"]
[ext_resource type="Texture2D" uid="uid://cfiw4bc0oylmf" path="res://img/nucleo_4/fondo/linea_4_29.png" id="30_i53wb"]
[ext_resource type="Texture2D" uid="uid://cftakyyfe70lb" path="res://img/nucleo_4/fondo/linea_4_30.png" id="31_ngetu"]
[ext_resource type="Texture2D" uid="uid://bryfv5rsnhcfk" path="res://img/nucleo_4/fondo/linea_4_31.png" id="32_g0gi7"]
[ext_resource type="Texture2D" uid="uid://cuj7rahq4v66h" path="res://img/nucleo_4/fondo/linea_4_32.png" id="33_hbart"]
[ext_resource type="Texture2D" uid="uid://cj82iyv0ov34d" path="res://img/nucleo_4/fondo/linea_4_33.png" id="34_i805h"]
[ext_resource type="Texture2D" uid="uid://c4fka4mthca3k" path="res://img/nucleo_4/fondo/linea_4_34.png" id="35_i18mj"]
[ext_resource type="Texture2D" uid="uid://b0oefsmh4cbe7" path="res://img/nucleo_4/fondo/linea_4_35.png" id="36_gypdg"]
[ext_resource type="Texture2D" uid="uid://dlglppumskyv3" path="res://img/nucleo_4/fondo/linea_4_36.png" id="37_xdbe7"]
[ext_resource type="Texture2D" uid="uid://c8gat5oxqlexf" path="res://img/nucleo_4/fondo/linea_4_37.png" id="38_u7xy5"]
[ext_resource type="Texture2D" uid="uid://hheybuh81vfu" path="res://img/nucleo_4/fondo/linea_4_38.png" id="39_2b438"]
[ext_resource type="Texture2D" uid="uid://c7ru7yx2v542f" path="res://img/nucleo_4/fondo/linea_4_39.png" id="40_hhdqe"]
[ext_resource type="Texture2D" uid="uid://djjkrmbhkh6xr" path="res://img/nucleo_4/fondo/linea_4_40.png" id="41_17tbl"]
[ext_resource type="Texture2D" uid="uid://dwdjlrivs0ds8" path="res://img/nucleo_4/fondo/linea_4_41.png" id="42_gpok5"]
[ext_resource type="Texture2D" uid="uid://dqveujt1y3dlp" path="res://img/nucleo_4/fondo/linea_4_42.png" id="43_j2s82"]
[ext_resource type="Texture2D" uid="uid://dfebgqcx3ft2f" path="res://img/nucleo_4/fondo/linea_4_43.png" id="44_gy4yu"]
[ext_resource type="Texture2D" uid="uid://dmxpnf8gg8shf" path="res://img/nucleo_4/fondo/linea_4_44.png" id="45_s3coj"]
[ext_resource type="Texture2D" uid="uid://dcd08v6eh7yvb" path="res://img/nucleo_4/fondo/linea_4_45.png" id="46_8mui2"]
[ext_resource type="Texture2D" uid="uid://bf1e07pnn4qri" path="res://img/nucleo_4/actividad_2/fondo.png" id="47_fpfh3"]
[ext_resource type="Texture2D" uid="uid://dakudpexnril6" path="res://img/nucleo_4/actividad_2/texto.png" id="48_6ti3a"]
[ext_resource type="PackedScene" uid="uid://sxca04083gd4" path="res://scenes/titila.tscn" id="48_mi8l2"]
[ext_resource type="FontFile" uid="uid://btxkh8gg8mwqh" path="res://assets/fonts/RobotoMono-Medium.ttf" id="49_hxonh"]
[ext_resource type="PackedScene" uid="uid://bsx2wekvb5qet" path="res://scenes/elementos/boton_m.tscn" id="50_0jn6p"]
[ext_resource type="Texture2D" uid="uid://b0i4j6xkjlh7g" path="res://img/loading/loading_1.png" id="50_ruq17"]
[ext_resource type="Texture2D" uid="uid://bijbof06qnk06" path="res://img/loading/loading_2.png" id="51_y3b7b"]
[ext_resource type="Texture2D" uid="uid://b0h4hnqvs7wk1" path="res://img/loading/loading_3.png" id="52_7luv6"]
[ext_resource type="Texture2D" uid="uid://ddbgcbxdnwpgu" path="res://img/nucleo_4/actividad_2/dalle.png" id="52_on2q4"]
[ext_resource type="Texture2D" uid="uid://4sfnk3jakq56" path="res://img/loading/loading_4.png" id="53_7jp0j"]
[ext_resource type="Texture2D" uid="uid://b0ee0kcvj86of" path="res://img/nucleo_4/actividad_2/ideogram.png" id="53_blcgd"]
[ext_resource type="Texture2D" uid="uid://cf4os06gj7gul" path="res://img/nucleo_4/actividad_2/leonardo.png" id="54_deus4"]
[ext_resource type="Texture2D" uid="uid://d12oayqbcn3d6" path="res://img/loading/loading_5.png" id="54_gldod"]
[ext_resource type="Texture2D" uid="uid://bpuimdk3yyawx" path="res://img/loading/loading_6.png" id="55_l1v3n"]
[ext_resource type="PackedScene" uid="uid://bgs2ty3i0fjmf" path="res://scenes/elementos/boton_s.tscn" id="55_ltn1g"]
[ext_resource type="Texture2D" uid="uid://dfrwbnuh3crqu" path="res://img/loading/loading_7.png" id="56_lda25"]
[ext_resource type="Texture2D" uid="uid://d2gbafygtnpy" path="res://img/nucleo_4/actividad_2/leonardo_disabled.png" id="56_xasmo"]
[ext_resource type="Texture2D" uid="uid://ctjvgiydk2kw1" path="res://img/nucleo_4/actividad_2/leonardo_info.png" id="57_7gl4p"]
[ext_resource type="Texture2D" uid="uid://doq4s228lldvg" path="res://img/loading/loading_8.png" id="57_w61ak"]
[ext_resource type="Texture2D" uid="uid://bgbkb6d4dpv44" path="res://img/nucleo_4/actividad_2/dalle_disabled.png" id="58_nm3xp"]
[ext_resource type="Texture2D" uid="uid://dpx2q3jcjg2b1" path="res://img/loading/loading_9.png" id="58_nnr3v"]
[ext_resource type="Texture2D" uid="uid://d0rqgyxrftg0k" path="res://img/loading/loading_10.png" id="59_lapkk"]
[ext_resource type="Texture2D" uid="uid://udswpab5ujfw" path="res://img/nucleo_4/actividad_2/dalle_info.png" id="59_tp70d"]
[ext_resource type="Texture2D" uid="uid://h4cv0pv17mo4" path="res://img/loading/loading_11.png" id="60_a0jn2"]
[ext_resource type="Texture2D" uid="uid://bpxvb3lwoetb2" path="res://img/nucleo_4/actividad_2/ideogram_disabled.png" id="60_rxtmu"]
[ext_resource type="Texture2D" uid="uid://cgiu6u1egs48x" path="res://img/nucleo_4/actividad_2/ideogram_info.png" id="61_lvej4"]
[ext_resource type="Texture2D" uid="uid://c5i08tdbeo1a8" path="res://img/loading/loading_12.png" id="61_sdpla"]
[ext_resource type="Texture2D" uid="uid://dllf1hkbyvoik" path="res://img/loading/loading_13.png" id="62_omv8p"]
[ext_resource type="Texture2D" uid="uid://dn5bbvh76rjdn" path="res://img/loading/loading_14.png" id="63_y2qop"]
[ext_resource type="Texture2D" uid="uid://ccfe7qrudfo2h" path="res://img/loading/loading_15.png" id="64_hxluo"]
[ext_resource type="Texture2D" uid="uid://ba0uyr270yvtg" path="res://img/loading/loading_16.png" id="65_2gkcy"]
[ext_resource type="Texture2D" uid="uid://cv6iwcuu4ow0b" path="res://img/loading/loading_17.png" id="66_hspqo"]
[ext_resource type="Texture2D" uid="uid://dopckelulw8q2" path="res://img/loading/loading_18.png" id="67_dlqg7"]
[ext_resource type="Texture2D" uid="uid://cnby2bq71t0lk" path="res://img/loading/loading_19.png" id="68_li1jl"]
[ext_resource type="Texture2D" uid="uid://dxlo80lju433i" path="res://img/loading/loading_20.png" id="69_jw72g"]
[ext_resource type="Texture2D" uid="uid://cf0sojjp8spwa" path="res://img/loading/loading_21.png" id="70_g5gyi"]
[ext_resource type="Texture2D" uid="uid://bstjgmdpxk3ef" path="res://img/loading/loading_22.png" id="71_nr8np"]
[ext_resource type="Texture2D" uid="uid://bpg8gpoe0fi4n" path="res://img/loading/loading_23.png" id="72_lqwjm"]
[ext_resource type="PackedScene" uid="uid://c0pnxckwulqw5" path="res://scenes/actividades/presionar_anim.tscn" id="84_pugrm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xjnmg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_uody8")
}, {
"duration": 1.0,
"texture": ExtResource("3_2wyqo")
}, {
"duration": 1.0,
"texture": ExtResource("4_1a41d")
}, {
"duration": 1.0,
"texture": ExtResource("5_ang6x")
}, {
"duration": 1.0,
"texture": ExtResource("6_geked")
}, {
"duration": 1.0,
"texture": ExtResource("7_83wkd")
}, {
"duration": 1.0,
"texture": ExtResource("8_pkg4p")
}, {
"duration": 1.0,
"texture": ExtResource("9_k5vty")
}, {
"duration": 1.0,
"texture": ExtResource("10_tklke")
}, {
"duration": 1.0,
"texture": ExtResource("11_bjwsp")
}, {
"duration": 1.0,
"texture": ExtResource("12_6cexi")
}, {
"duration": 1.0,
"texture": ExtResource("13_elvhn")
}, {
"duration": 1.0,
"texture": ExtResource("14_pyf2i")
}, {
"duration": 1.0,
"texture": ExtResource("15_nvj2q")
}, {
"duration": 1.0,
"texture": ExtResource("16_hja2t")
}, {
"duration": 1.0,
"texture": ExtResource("17_flyam")
}, {
"duration": 1.0,
"texture": ExtResource("18_cy2w8")
}, {
"duration": 1.0,
"texture": ExtResource("19_muhme")
}, {
"duration": 1.0,
"texture": ExtResource("20_qnmam")
}, {
"duration": 1.0,
"texture": ExtResource("21_lkf27")
}, {
"duration": 1.0,
"texture": ExtResource("22_i6hby")
}, {
"duration": 1.0,
"texture": ExtResource("23_1xqi5")
}, {
"duration": 1.0,
"texture": ExtResource("24_m5lel")
}, {
"duration": 1.0,
"texture": ExtResource("25_85sgg")
}, {
"duration": 1.0,
"texture": ExtResource("26_skycf")
}, {
"duration": 1.0,
"texture": ExtResource("27_kvgxb")
}, {
"duration": 1.0,
"texture": ExtResource("28_fh6ak")
}, {
"duration": 1.0,
"texture": ExtResource("29_wkaby")
}, {
"duration": 1.0,
"texture": ExtResource("30_i53wb")
}, {
"duration": 1.0,
"texture": ExtResource("31_ngetu")
}, {
"duration": 1.0,
"texture": ExtResource("32_g0gi7")
}, {
"duration": 1.0,
"texture": ExtResource("33_hbart")
}, {
"duration": 1.0,
"texture": ExtResource("34_i805h")
}, {
"duration": 1.0,
"texture": ExtResource("35_i18mj")
}, {
"duration": 1.0,
"texture": ExtResource("36_gypdg")
}, {
"duration": 1.0,
"texture": ExtResource("37_xdbe7")
}, {
"duration": 1.0,
"texture": ExtResource("38_u7xy5")
}, {
"duration": 1.0,
"texture": ExtResource("39_2b438")
}, {
"duration": 1.0,
"texture": ExtResource("40_hhdqe")
}, {
"duration": 1.0,
"texture": ExtResource("41_17tbl")
}, {
"duration": 1.0,
"texture": ExtResource("42_gpok5")
}, {
"duration": 1.0,
"texture": ExtResource("43_j2s82")
}, {
"duration": 1.0,
"texture": ExtResource("44_gy4yu")
}, {
"duration": 1.0,
"texture": ExtResource("45_s3coj")
}, {
"duration": 1.0,
"texture": ExtResource("46_8mui2")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_jsnyv"]
font = ExtResource("49_hxonh")
font_size = 29
font_color = Color(0.615686, 0.0313726, 0.909804, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_n2sfg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("50_ruq17")
}, {
"duration": 1.0,
"texture": ExtResource("51_y3b7b")
}, {
"duration": 1.0,
"texture": ExtResource("52_7luv6")
}, {
"duration": 1.0,
"texture": ExtResource("53_7jp0j")
}, {
"duration": 1.0,
"texture": ExtResource("54_gldod")
}, {
"duration": 1.0,
"texture": ExtResource("55_l1v3n")
}, {
"duration": 1.0,
"texture": ExtResource("56_lda25")
}, {
"duration": 1.0,
"texture": ExtResource("57_w61ak")
}, {
"duration": 1.0,
"texture": ExtResource("58_nnr3v")
}, {
"duration": 1.0,
"texture": ExtResource("59_lapkk")
}, {
"duration": 1.0,
"texture": ExtResource("60_a0jn2")
}, {
"duration": 1.0,
"texture": ExtResource("61_sdpla")
}, {
"duration": 1.0,
"texture": ExtResource("62_omv8p")
}, {
"duration": 1.0,
"texture": ExtResource("63_y2qop")
}, {
"duration": 1.0,
"texture": ExtResource("64_hxluo")
}, {
"duration": 1.0,
"texture": ExtResource("65_2gkcy")
}, {
"duration": 1.0,
"texture": ExtResource("66_hspqo")
}, {
"duration": 1.0,
"texture": ExtResource("67_dlqg7")
}, {
"duration": 1.0,
"texture": ExtResource("68_li1jl")
}, {
"duration": 1.0,
"texture": ExtResource("69_jw72g")
}, {
"duration": 1.0,
"texture": ExtResource("70_g5gyi")
}, {
"duration": 1.0,
"texture": ExtResource("71_nr8np")
}, {
"duration": 1.0,
"texture": ExtResource("72_lqwjm")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[node name="Actividad02" type="Node2D"]
script = ExtResource("1_4a6os")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.309385, 0.309385, 0.309385, 1)
scale = Vector2(3.42857, 3.78095)
sprite_frames = SubResource("SpriteFrames_xjnmg")
centered = false

[node name="Fondo" type="Sprite2D" parent="."]
position = Vector2(969, 617)
texture = ExtResource("47_fpfh3")

[node name="Titila" parent="Fondo" instance=ExtResource("48_mi8l2")]
position = Vector2(528, -472)
scale = Vector2(1.02663, 0.546729)
color = Color(0.615686, 0.0313726, 0.909804, 1)

[node name="Texto" type="Sprite2D" parent="Fondo"]
position = Vector2(-176, -411)
texture = ExtResource("48_6ti3a")

[node name="Label" type="Label" parent="Fondo"]
offset_left = -879.0
offset_top = -431.0
offset_right = -202.0
offset_bottom = -391.0
text = "HAZ UN ANUNCIO PUBLICITARIO"
label_settings = SubResource("LabelSettings_jsnyv")

[node name="Loading" type="AnimatedSprite2D" parent="Fondo"]
modulate = Color(0.615686, 0.0313726, 0.909804, 1)
position = Vector2(-589, -18)
scale = Vector2(0.684, 0.669)
sprite_frames = SubResource("SpriteFrames_n2sfg")

[node name="Loading2" type="AnimatedSprite2D" parent="Fondo"]
modulate = Color(0.615686, 0.0313726, 0.909804, 1)
position = Vector2(-18, -18)
scale = Vector2(0.669, 0.669)
sprite_frames = SubResource("SpriteFrames_n2sfg")

[node name="Loading3" type="AnimatedSprite2D" parent="Fondo"]
modulate = Color(0.615686, 0.0313726, 0.909804, 1)
position = Vector2(592, -18)
scale = Vector2(0.669, 0.669)
sprite_frames = SubResource("SpriteFrames_n2sfg")

[node name="Timer" type="Timer" parent="Fondo"]
wait_time = 0.1

[node name="BotonM" parent="Fondo" instance=ExtResource("50_0jn6p")]
offset_left = 557.0
offset_top = -445.0
offset_right = 921.0
offset_bottom = -377.0
color = Color(0.615686, 0.0313726, 0.909804, 1)
texto = "GENERAR"

[node name="Dalle" type="Sprite2D" parent="Fondo"]
visible = false
position = Vector2(-12, -16)
texture = ExtResource("52_on2q4")

[node name="Ideogram" type="Sprite2D" parent="Fondo"]
visible = false
position = Vector2(589, -16)
texture = ExtResource("53_blcgd")

[node name="Leonardo" type="Sprite2D" parent="Fondo"]
visible = false
position = Vector2(-585, -16)
texture = ExtResource("54_deus4")

[node name="Titila2" parent="Fondo" instance=ExtResource("48_mi8l2")]
visible = false
position = Vector2(681, 250)
scale = Vector2(0.384988, 0.341122)
color = Color(0.615686, 0.0313726, 0.909804, 1)

[node name="BotonS" parent="Fondo" instance=ExtResource("55_ltn1g")]
visible = false
offset_left = 698.0
offset_top = 264.0
offset_right = 826.0
offset_bottom = 309.0
color = Color(0.615686, 0.0313726, 0.909804, 1)
texto = "ENVIAR"

[node name="LeonardoDisabled" type="Sprite2D" parent="."]
visible = false
position = Vector2(384, 601)
texture = ExtResource("56_xasmo")

[node name="LeonardoInfo" type="Sprite2D" parent="."]
visible = false
position = Vector2(386, 819)
texture = ExtResource("57_7gl4p")

[node name="DalleDisabled" type="Sprite2D" parent="."]
visible = false
position = Vector2(957, 601)
texture = ExtResource("58_nm3xp")

[node name="DalleInfo" type="Sprite2D" parent="."]
visible = false
position = Vector2(959, 820)
texture = ExtResource("59_tp70d")

[node name="IdeogramDisabled" type="Sprite2D" parent="."]
visible = false
position = Vector2(1558, 601)
texture = ExtResource("60_rxtmu")

[node name="IdeogramInfo" type="Sprite2D" parent="."]
visible = false
position = Vector2(1562, 821)
texture = ExtResource("61_lvej4")

[node name="Presionar" parent="." instance=ExtResource("84_pugrm")]
modulate = Color(0.615686, 0.0313726, 0.909804, 1)
position = Vector2(34, -35)

[node name="Button1" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = 143.0
offset_top = 362.0
offset_right = 625.0
offset_bottom = 840.0

[node name="Button2" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = 717.0
offset_top = 362.0
offset_right = 1198.0
offset_bottom = 837.0

[node name="Button3" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = 1317.0
offset_top = 362.0
offset_right = 1797.0
offset_bottom = 838.0

[connection signal="timeout" from="Fondo/Timer" to="." method="_on_timer_timeout"]
[connection signal="button_down" from="Fondo/BotonM" to="." method="_on_boton_m_button_down"]
[connection signal="button_down" from="Fondo/BotonS" to="." method="_on_boton_s_button_down"]
[connection signal="mouse_entered" from="Button1" to="." method="_on_button_1_mouse_entered"]
[connection signal="mouse_exited" from="Button1" to="." method="_on_button_1_mouse_exited"]
[connection signal="mouse_entered" from="Button2" to="." method="_on_button_2_mouse_entered"]
[connection signal="mouse_exited" from="Button2" to="." method="_on_button_2_mouse_exited"]
[connection signal="mouse_entered" from="Button3" to="." method="_on_button_3_mouse_entered"]
[connection signal="mouse_exited" from="Button3" to="." method="_on_button_3_mouse_exited"]
